language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__higlights_for_prefix_string_alias_with_alternative_definitions_triggered_from_usage.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\npub fn main() -> String {\n  let wibble = \"1-wibble\"\n  let digit = case wibble {\n    \"1\" as digit <> _rest | \"2\" as digit <> _rest -> digit\n    other -> other\n  }\n  digit\n}\n"
---
-- app.gleam

pub fn main() -> String {
  let wibble = "1-wibble"
  let digit = case wibble {
    "1" as digit <> _rest | "2" as digit <> _rest -> digit
           ▔▔▔▔▔                   ▔▔▔▔▔             ↑▔▔▔▔
    other -> other
  }
  digit
}
