language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__higlights_for_prefix_string_suffix_used_in_guard.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nfn main() {\n  case \"1-wibble\" {\n    \"1\" <> rest if rest == \"-wibble\" -> rest\n    _ -> \"\"\n  }\n}\n"
---
-- app.gleam

fn main() {
  case "1-wibble" {
    "1" <> rest if rest == "-wibble" -> rest
           ↑▔▔▔    ▔▔▔▔                 ▔▔▔▔
    _ -> ""
  }
}
